--- a/code/index.html
+++ b/code/index.html
@@ -15,7 +15,7 @@
     <div class="navbar">
         <div class="nav">
             <div class="left">
-                <img src="LogoHPblue_1.svg" alt="" width="48px">
+                <img src="/assests/LogoHPblue_1.svg" alt="" width="48px">
                 <button>What are you looking for?
                     <i class="fa-solid fa-magnifying-glass" style="font-size: 20px; color: black;"></i>
                 </button>
@@ -76,7 +76,7 @@
     <div class="space"></div>
     <div class="boxes">
         <div class="box box1">
-            <img src="hp.svg" alt="" width="150px">
+            <img src="/assests/hp.svg" alt="" width="150px">
             <div class="box1in">
                 <i class="fa-solid fa-chevron-right"></i>
                 <p>Learn more</p>
@@ -403,16 +403,16 @@
     <div class="space"></div>
     <div class="bot11">
         <div class="bot1">
-            <img src="in.png" alt="" width="25px">
+            <img src="/assests/in.png" alt="" width="25px">
             <p>India</p>
             <p>| Order by phone: Sales:1800-230-485</p>
 
         </div>
     </div>
     <div class="bot2">
-        <img src="one.gif" alt="">
-        <img src="two.gif" alt=""><img src="four.gif" alt=""><img src="five.gif" alt=""><img src="six.avif" alt=""><img
-            src="seven.gif" alt=""><img src="eight.gif" alt="">
+        <img src="/assests/one.gif" alt="">
+        <img src="/assests/two.gif" alt=""><img src="/assests/four.gif" alt=""><img src="/assests/five.gif" alt=""><img src="/assests/six.avif" alt=""><img
+            src="/assests/seven.gif" alt=""><img src="/assests/eight.gif" alt="">
     </div>
     <div class="bot3">
         <div class="bot33">
